# Quiz_Figure

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  Objects.cpp  Objects.h  Project_Quiz_Figure  Quiz_Figure  Quiz_Figure.cbp  README.md  classes.cpp  classes.h  filename.json  main.cpp  new.json
Shader_files/: lampShader.fs  lampShader.vs  shader.fs  shader.vs
ci/travis/: install-linux.sh  install-osx.sh
include/: Button_entry.h  Camera_class.h  Container_map.h  Elements.h  Events_manager.h  GUI.h  Interface.h  Map_editor_handler.h  Map_parser.h  Menu.h  Mesh_class.h  Model.h  Model_class.h  Models_path.h  My_camera.h  Object.h  Parameters_label.h  Render_objects.h  Scene.h  Shader.h  Window.h
include/Features_lib/: Handler_feature.h  Logic_manager.h  Objects.h  Parser.h
include/Graphics_lib/: Model_class.h  Render_manager.h  utils.h
include/Logic_manager/: Logic_manager.h
include/Map_editor_lib/: Container_map.h  Elements.h  GUI.h  Interface.h  Key_press.h  Levels.h  Map_editor_handler.h  Map_parser.h  Menu.h  Parameters_label.h  Scene.h  shader_s.h
include/Physics_lib/: classes.h
include/features/: feature_objects.h
include/glad/: glad.h
include/graphics/: Camera_class.h  Events_manager.h  Mesh_class.h  Model_class.h  Objects.h  Point_light.h  Render_manager.h  Shader.h  utils.h
include/physics_interface/: classes.h
levels/: lvl1.json  lvl2.json  lvl3.json  lvl4.json
resources/objects/funny_square/: white_cube.mtl
resources/objects/jumper/: jumper.mtl
resources/objects/test/: test_cube.mtl
resources/objects/white_cube/: white_cube.mtl
resources/objects/wooden_cylinder/: wooden_cylinder.mtl
src/: Button_entry.cpp  Camera_class.cpp  Classes.cpp  Container_map.cpp  Elements.cpp  Events_manager.cpp  GUI.cpp  Handler_feature.cpp  Interface.cpp  Logic_manager.cpp  Map_editor_handler.cpp  Map_parser.cpp  Menu.cpp  Mesh_class.cpp  Model.cpp  Model_class.cpp  Objects.cpp  Parameters_label.cpp  Parser.cpp  Scene.cpp  Shader.cpp  glad.c  main.cpp  mainRavesli.cpp
src/Features_lib/: Handler_feature.cpp  Logic_manager.cpp  Objects.cpp  Parser.cpp
src/Graphics_lib/: Camera_class.cpp  Events_manager.cpp  Mesh_class.cpp  Model_class.cpp  Point_light.cpp  Render_manager.cpp  Shader.cpp  stb_image.cpp
src/Map_editor_lib/: Container_map.cpp  Elements.cpp  GUI.cpp  Interface.cpp  Key_press.cpp  Levels.cpp  Map_editor_handler.cpp  Map_parser.cpp  Menu.cpp  Parameters_label.cpp  Scene.cpp  stb_image.cpp
src/Physics_lib/: Classes.cpp
src/features/: feature_objects.cpp
src/graphics/: Camera_class.cpp  Events_manager.cpp  Mesh_class.cpp  Model_class.cpp  Objects.cpp  Point_light.cpp  Render_manager.cpp  Shader.cpp
test/: CMakeLists.txt  Quiz_Figure.cbp  default_speed_change.cpp  dynamic_collision.cpp  dynamic_collision_tests  elements_tests.cpp  gmock_tests.cpp  gtests.cpp  handler.cpp  long_collision.cpp  map_editor_handler_tests.cpp  object.cpp  object_dyn.cpp  object_stat.cpp  parameters_label_tests.cpp  player.cpp  player_dyn_collision.cpp  scene_tests.cpp  static_collision.cpp  test1.cpp
